added a layout for the table

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     @model List<WebApplication1.Models.Product>
     ViewData["Title"] = "Home Page";
     int index = 1;
+    Layout = "_ProductLayout";
 }
 
 <div class="text-center">
