--- a/WebApplication1/Views/Shared/_ProductLayout.cshtml
+++ b/WebApplication1/Views/Shared/_ProductLayout.cshtml
@@ -36,10 +36,15 @@
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
-    <div class="container">
-        &copy; 2026 - WebApplication1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-    </div>
+<footer>
+    @if (IsSectionDefined("Copyright"))
+    {
+        @RenderSection("Copyright")
+    }
+    else
+    {
+        <p>Дефолтный копирайтинг</p>
+    }
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
